# sct_pat_fi

./: .gitignore  Kopio_thl_sct_pat_fi_20230207_2kokeilu_pk.xlsx  create_cs_format.sql  create_snap_views.sql  sct_pat_fi_kanta_20220927.sql  sct_pat_fi_kanta_20221101_final parent5,  korjauksia6.xlsx  sct_pat_fi_kanta_20221101_final parent5,  korjauksia8.xlsx  sct_pat_fi_kanta_20221101_final parent5,  korjauksia9.xlsx  thl_sct_pat_fi_20230207_2.xlsx  thl_sct_pat_fi_20230214.xlsx  thl_test_korjauksia8_20230118.xlsx  tmp_test_thl.xlsx
check/: check.py  db.py  verhoeff.py
cs_format/: cs_format.py  database.py  termid_to_lineid.py
data/: Inactivated_20231011.xlsx  Kopio_thl_sct_pat_fi_20230215 paula.xlsx  inactivated_concepts.csv  thl_sct_pat_fi_20230215.xlsx  thl_sct_pat_fi_20230215_cs_format.xlsx  thl_sct_pat_fi_20230215_cs_format_ordered.xlsx  thl_sct_pat_fi_20230215_cs_format_ordered_fixed.xlsx  thl_sct_pat_fi_20230227.xlsx  thl_sct_pat_fi_20230227_cs_format.xlsx  thl_sct_pat_fi_20230914.xlsx  thl_sct_pat_fi_20230914_cs_format.xlsx  (+1 more)
update/: .coveragerc  .env.example  .pylintrc  pyproject.toml  sct_pat_fi_kanta_20221101_korjauksia2.xlsx  tasks.py  tmp_test.xlsx
update/docs/: instructions.md  product_requirements_document.md  technical_design_document.md
update/docs/architecture_decision_records/: update-table.md
update/src/: config.py  database_connection.py  index.py  main.py
update/src/services/: __init__.py  component.py  database.py  update.py  verhoeff.py
update/src/tests/data/: test_db.csv  test_excel.csv
update/src/tests/services/: update_test.py
(+12 files in other folders)
